# api/apiv1/apiv1.openapi3.yaml
@@ -53,6 +53,12 @@ paths:
         schema:
           type: boolean
           default: false
+      - name: filter[is_deleted]
+        in: query
+        required: false
+        schema:
+          type: boolean
+          default: false
 
       operationId: ListMemos
 
